--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="registrationViewModel"
-            type="com.sdiegas.zkbchallenge.ui.RegistrationViewModel" />
+            type="com.sdiegas.zkbchallenge.ui.registration.RegistrationViewModel" />
     </data>
 
     <ScrollView
